// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fabric renders a Fabric component correctly 1`] = `
<div
  className=
      ms-Fabric
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        color: #323130;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
      & button {
        font-family: inherit;
      }
      & input {
        font-family: inherit;
      }
      & textarea {
        font-family: inherit;
      }
>
  test
</div>
`;

exports[`Fabric renders a Fabric component in RTL and LTR theme 1`] = `
<div>
  <div
    className=
        ms-Fabric
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #323130;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
        & button {
          font-family: inherit;
        }
        & input {
          font-family: inherit;
        }
        & textarea {
          font-family: inherit;
        }
    dir="ltr"
  >
    <div
      className=
          ms-Checkbox
          is-enabled

    >
      <input
        aria-checked="false"
        aria-label="I am in ltr"
        checked={false}
        className=


        id="checkbox-1"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <label
        className=
            ms-Checkbox-label

        htmlFor="checkbox-1"
      >
        <div
          className=
              ms-Checkbox-checkbox

        >
          <i
            aria-hidden={true}
            className=
                ms-Checkbox-checkmark
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  display: inline-block;
                  font-family: "FabricMDL2Icons";
                  font-style: normal;
                  font-weight: normal;
                  speak: none;
                }
            data-icon-name="CheckMark"
          >
            
          </i>
        </div>
        <span
          aria-hidden="true"
          className=
              ms-Checkbox-text

        >
          I am in ltr
        </span>
      </label>
    </div>
    <div
      className=
          ms-Fabric
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #323130;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
          }
          & button {
            font-family: inherit;
          }
          & input {
            font-family: inherit;
          }
          & textarea {
            font-family: inherit;
          }
      dir="rtl"
    >
      <div
        className=
            ms-Checkbox
            is-enabled

      >
        <input
          aria-checked="false"
          aria-label="I am in rtl, inside of ltr"
          checked={false}
          className=


          id="checkbox-2"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="checkbox"
        />
        <label
          className=
              ms-Checkbox-label

          htmlFor="checkbox-2"
        >
          <div
            className=
                ms-Checkbox-checkbox

          >
            <i
              aria-hidden={true}
              className=
                  ms-Checkbox-checkmark
                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    display: inline-block;
                    font-family: "FabricMDL2Icons";
                    font-style: normal;
                    font-weight: normal;
                    speak: none;
                  }
              data-icon-name="CheckMark"
            >
              
            </i>
          </div>
          <span
            aria-hidden="true"
            className=
                ms-Checkbox-text

          >
            I am in rtl, inside of ltr
          </span>
        </label>
      </div>
      <div
        className=
            ms-Fabric
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
            }
            & button {
              font-family: inherit;
            }
            & input {
              font-family: inherit;
            }
            & textarea {
              font-family: inherit;
            }
        dir="ltr"
      >
        <div
          className=
              ms-Checkbox
              is-enabled

        >
          <input
            aria-checked="false"
            aria-label="I am in ltr, inside of rtl, inside of ltr"
            checked={false}
            className=


            id="checkbox-3"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
          <label
            className=
                ms-Checkbox-label

            htmlFor="checkbox-3"
          >
            <div
              className=
                  ms-Checkbox-checkbox

            >
              <i
                aria-hidden={true}
                className=
                    ms-Checkbox-checkmark
                    {
                      -moz-osx-font-smoothing: grayscale;
                      -webkit-font-smoothing: antialiased;
                      display: inline-block;
                      font-family: "FabricMDL2Icons";
                      font-style: normal;
                      font-weight: normal;
                      speak: none;
                    }
                data-icon-name="CheckMark"
              >
                
              </i>
            </div>
            <span
              aria-hidden="true"
              className=
                  ms-Checkbox-text

            >
              I am in ltr, inside of rtl, inside of ltr
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className=
        ms-Fabric
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #323130;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
        & button {
          font-family: inherit;
        }
        & input {
          font-family: inherit;
        }
        & textarea {
          font-family: inherit;
        }
    dir="rtl"
  >
    <div
      className=
          ms-Checkbox
          is-enabled

    >
      <input
        aria-checked="false"
        aria-label="I am in rtl"
        checked={false}
        className=


        id="checkbox-4"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <label
        className=
            ms-Checkbox-label

        htmlFor="checkbox-4"
      >
        <div
          className=
              ms-Checkbox-checkbox

        >
          <i
            aria-hidden={true}
            className=
                ms-Checkbox-checkmark
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  display: inline-block;
                  font-family: "FabricMDL2Icons";
                  font-style: normal;
                  font-weight: normal;
                  speak: none;
                }
            data-icon-name="CheckMark"
          >
            
          </i>
        </div>
        <span
          aria-hidden="true"
          className=
              ms-Checkbox-text

        >
          I am in rtl
        </span>
      </label>
    </div>
    <div
      className=
          ms-Fabric
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #323130;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
          }
          & button {
            font-family: inherit;
          }
          & input {
            font-family: inherit;
          }
          & textarea {
            font-family: inherit;
          }
      dir="ltr"
    >
      <div
        className=
            ms-Checkbox
            is-enabled

      >
        <input
          aria-checked="false"
          aria-label="I am in ltr, inside of rtl"
          checked={false}
          className=


          id="checkbox-5"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="checkbox"
        />
        <label
          className=
              ms-Checkbox-label

          htmlFor="checkbox-5"
        >
          <div
            className=
                ms-Checkbox-checkbox

          >
            <i
              aria-hidden={true}
              className=
                  ms-Checkbox-checkmark
                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    display: inline-block;
                    font-family: "FabricMDL2Icons";
                    font-style: normal;
                    font-weight: normal;
                    speak: none;
                  }
              data-icon-name="CheckMark"
            >
              
            </i>
          </div>
          <span
            aria-hidden="true"
            className=
                ms-Checkbox-text

          >
            I am in ltr, inside of rtl
          </span>
        </label>
      </div>
      <div
        className=
            ms-Fabric
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
            }
            & button {
              font-family: inherit;
            }
            & input {
              font-family: inherit;
            }
            & textarea {
              font-family: inherit;
            }
        dir="rtl"
      >
        <div
          className=
              ms-Checkbox
              is-enabled

        >
          <input
            aria-checked="false"
            aria-label="I am in rtl, inside of rtl, inside of rtl"
            checked={false}
            className=


            id="checkbox-6"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
          <label
            className=
                ms-Checkbox-label

            htmlFor="checkbox-6"
          >
            <div
              className=
                  ms-Checkbox-checkbox

            >
              <i
                aria-hidden={true}
                className=
                    ms-Checkbox-checkmark
                    {
                      -moz-osx-font-smoothing: grayscale;
                      -webkit-font-smoothing: antialiased;
                      display: inline-block;
                      font-family: "FabricMDL2Icons";
                      font-style: normal;
                      font-weight: normal;
                      speak: none;
                    }
                data-icon-name="CheckMark"
              >
                
              </i>
            </div>
            <span
              aria-hidden="true"
              className=
                  ms-Checkbox-text

            >
              I am in rtl, inside of rtl, inside of rtl
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Fabric renders a Fabric component in RTL and LTR theme 2`] = `
<div>
  <div
    className=
        ms-Fabric
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #323130;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
        & button {
          font-family: inherit;
        }
        & input {
          font-family: inherit;
        }
        & textarea {
          font-family: inherit;
        }
    dir="ltr"
  >
    <div
      className=
          ms-Checkbox
          is-enabled

    >
      <input
        aria-checked="false"
        aria-label="I am in ltr"
        checked={false}
        className=


        id="checkbox-7"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <label
        className=
            ms-Checkbox-label

        htmlFor="checkbox-7"
      >
        <div
          className=
              ms-Checkbox-checkbox

        >
          <i
            aria-hidden={true}
            className=
                ms-Checkbox-checkmark
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  display: inline-block;
                  font-family: "FabricMDL2Icons";
                  font-style: normal;
                  font-weight: normal;
                  speak: none;
                }
            data-icon-name="CheckMark"
          >
            
          </i>
        </div>
        <span
          aria-hidden="true"
          className=
              ms-Checkbox-text

        >
          I am in ltr
        </span>
      </label>
    </div>
    <div
      className=
          ms-Fabric
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #323130;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
          }
          & button {
            font-family: inherit;
          }
          & input {
            font-family: inherit;
          }
          & textarea {
            font-family: inherit;
          }
      dir="rtl"
    >
      <div
        className=
            ms-Checkbox
            is-enabled

      >
        <input
          aria-checked="false"
          aria-label="I am in rtl, inside of ltr"
          checked={false}
          className=


          id="checkbox-8"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="checkbox"
        />
        <label
          className=
              ms-Checkbox-label

          htmlFor="checkbox-8"
        >
          <div
            className=
                ms-Checkbox-checkbox

          >
            <i
              aria-hidden={true}
              className=
                  ms-Checkbox-checkmark
                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    display: inline-block;
                    font-family: "FabricMDL2Icons";
                    font-style: normal;
                    font-weight: normal;
                    speak: none;
                  }
              data-icon-name="CheckMark"
            >
              
            </i>
          </div>
          <span
            aria-hidden="true"
            className=
                ms-Checkbox-text

          >
            I am in rtl, inside of ltr
          </span>
        </label>
      </div>
      <div
        className=
            ms-Fabric
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
            }
            & button {
              font-family: inherit;
            }
            & input {
              font-family: inherit;
            }
            & textarea {
              font-family: inherit;
            }
        dir="ltr"
      >
        <div
          className=
              ms-Checkbox
              is-enabled

        >
          <input
            aria-checked="false"
            aria-label="I am in ltr, inside of rtl, inside of ltr"
            checked={false}
            className=


            id="checkbox-9"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
          <label
            className=
                ms-Checkbox-label

            htmlFor="checkbox-9"
          >
            <div
              className=
                  ms-Checkbox-checkbox

            >
              <i
                aria-hidden={true}
                className=
                    ms-Checkbox-checkmark
                    {
                      -moz-osx-font-smoothing: grayscale;
                      -webkit-font-smoothing: antialiased;
                      display: inline-block;
                      font-family: "FabricMDL2Icons";
                      font-style: normal;
                      font-weight: normal;
                      speak: none;
                    }
                data-icon-name="CheckMark"
              >
                
              </i>
            </div>
            <span
              aria-hidden="true"
              className=
                  ms-Checkbox-text

            >
              I am in ltr, inside of rtl, inside of ltr
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className=
        ms-Fabric
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #323130;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
        & button {
          font-family: inherit;
        }
        & input {
          font-family: inherit;
        }
        & textarea {
          font-family: inherit;
        }
    dir="rtl"
  >
    <div
      className=
          ms-Checkbox
          is-enabled

    >
      <input
        aria-checked="false"
        aria-label="I am in rtl"
        checked={false}
        className=


        id="checkbox-10"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <label
        className=
            ms-Checkbox-label

        htmlFor="checkbox-10"
      >
        <div
          className=
              ms-Checkbox-checkbox

        >
          <i
            aria-hidden={true}
            className=
                ms-Checkbox-checkmark
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  display: inline-block;
                  font-family: "FabricMDL2Icons";
                  font-style: normal;
                  font-weight: normal;
                  speak: none;
                }
            data-icon-name="CheckMark"
          >
            
          </i>
        </div>
        <span
          aria-hidden="true"
          className=
              ms-Checkbox-text

        >
          I am in rtl
        </span>
      </label>
    </div>
    <div
      className=
          ms-Fabric
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #323130;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
          }
          & button {
            font-family: inherit;
          }
          & input {
            font-family: inherit;
          }
          & textarea {
            font-family: inherit;
          }
      dir="ltr"
    >
      <div
        className=
            ms-Checkbox
            is-enabled

      >
        <input
          aria-checked="false"
          aria-label="I am in ltr, inside of rtl"
          checked={false}
          className=


          id="checkbox-11"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="checkbox"
        />
        <label
          className=
              ms-Checkbox-label

          htmlFor="checkbox-11"
        >
          <div
            className=
                ms-Checkbox-checkbox

          >
            <i
              aria-hidden={true}
              className=
                  ms-Checkbox-checkmark
                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    display: inline-block;
                    font-family: "FabricMDL2Icons";
                    font-style: normal;
                    font-weight: normal;
                    speak: none;
                  }
              data-icon-name="CheckMark"
            >
              
            </i>
          </div>
          <span
            aria-hidden="true"
            className=
                ms-Checkbox-text

          >
            I am in ltr, inside of rtl
          </span>
        </label>
      </div>
      <div
        className=
            ms-Fabric
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
            }
            & button {
              font-family: inherit;
            }
            & input {
              font-family: inherit;
            }
            & textarea {
              font-family: inherit;
            }
        dir="rtl"
      >
        <div
          className=
              ms-Checkbox
              is-enabled

        >
          <input
            aria-checked="false"
            aria-label="I am in rtl, inside of rtl, inside of rtl"
            checked={false}
            className=


            id="checkbox-12"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
          <label
            className=
                ms-Checkbox-label

            htmlFor="checkbox-12"
          >
            <div
              className=
                  ms-Checkbox-checkbox

            >
              <i
                aria-hidden={true}
                className=
                    ms-Checkbox-checkmark
                    {
                      -moz-osx-font-smoothing: grayscale;
                      -webkit-font-smoothing: antialiased;
                      display: inline-block;
                      font-family: "FabricMDL2Icons";
                      font-style: normal;
                      font-weight: normal;
                      speak: none;
                    }
                data-icon-name="CheckMark"
              >
                
              </i>
            </div>
            <span
              aria-hidden="true"
              className=
                  ms-Checkbox-text

            >
              I am in rtl, inside of rtl, inside of rtl
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Fabric renders a Fabric component in RTL and LTR theme 3`] = `
<div>
  <div
    className=
        ms-Fabric
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #323130;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
        & button {
          font-family: inherit;
        }
        & input {
          font-family: inherit;
        }
        & textarea {
          font-family: inherit;
        }
    dir="ltr"
  >
    <div
      className=
          ms-Checkbox
          is-enabled

    >
      <input
        aria-checked="false"
        aria-label="I am in ltr"
        checked={false}
        className=


        id="checkbox-13"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <label
        className=
            ms-Checkbox-label

        htmlFor="checkbox-13"
      >
        <div
          className=
              ms-Checkbox-checkbox

        >
          <i
            aria-hidden={true}
            className=
                ms-Checkbox-checkmark
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  display: inline-block;
                  font-family: "FabricMDL2Icons";
                  font-style: normal;
                  font-weight: normal;
                  speak: none;
                }
            data-icon-name="CheckMark"
          >
            
          </i>
        </div>
        <span
          aria-hidden="true"
          className=
              ms-Checkbox-text

        >
          I am in ltr
        </span>
      </label>
    </div>
    <div
      className=
          ms-Fabric
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #323130;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
          }
          & button {
            font-family: inherit;
          }
          & input {
            font-family: inherit;
          }
          & textarea {
            font-family: inherit;
          }
      dir="rtl"
    >
      <div
        className=
            ms-Checkbox
            is-enabled

      >
        <input
          aria-checked="false"
          aria-label="I am in rtl, inside of ltr"
          checked={false}
          className=


          id="checkbox-14"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="checkbox"
        />
        <label
          className=
              ms-Checkbox-label

          htmlFor="checkbox-14"
        >
          <div
            className=
                ms-Checkbox-checkbox

          >
            <i
              aria-hidden={true}
              className=
                  ms-Checkbox-checkmark
                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    display: inline-block;
                    font-family: "FabricMDL2Icons";
                    font-style: normal;
                    font-weight: normal;
                    speak: none;
                  }
              data-icon-name="CheckMark"
            >
              
            </i>
          </div>
          <span
            aria-hidden="true"
            className=
                ms-Checkbox-text

          >
            I am in rtl, inside of ltr
          </span>
        </label>
      </div>
      <div
        className=
            ms-Fabric
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
            }
            & button {
              font-family: inherit;
            }
            & input {
              font-family: inherit;
            }
            & textarea {
              font-family: inherit;
            }
        dir="ltr"
      >
        <div
          className=
              ms-Checkbox
              is-enabled

        >
          <input
            aria-checked="false"
            aria-label="I am in ltr, inside of rtl, inside of ltr"
            checked={false}
            className=


            id="checkbox-15"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
          <label
            className=
                ms-Checkbox-label

            htmlFor="checkbox-15"
          >
            <div
              className=
                  ms-Checkbox-checkbox

            >
              <i
                aria-hidden={true}
                className=
                    ms-Checkbox-checkmark
                    {
                      -moz-osx-font-smoothing: grayscale;
                      -webkit-font-smoothing: antialiased;
                      display: inline-block;
                      font-family: "FabricMDL2Icons";
                      font-style: normal;
                      font-weight: normal;
                      speak: none;
                    }
                data-icon-name="CheckMark"
              >
                
              </i>
            </div>
            <span
              aria-hidden="true"
              className=
                  ms-Checkbox-text

            >
              I am in ltr, inside of rtl, inside of ltr
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className=
        ms-Fabric
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #323130;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
        & button {
          font-family: inherit;
        }
        & input {
          font-family: inherit;
        }
        & textarea {
          font-family: inherit;
        }
    dir="rtl"
  >
    <div
      className=
          ms-Checkbox
          is-enabled

    >
      <input
        aria-checked="false"
        aria-label="I am in rtl"
        checked={false}
        className=


        id="checkbox-16"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <label
        className=
            ms-Checkbox-label

        htmlFor="checkbox-16"
      >
        <div
          className=
              ms-Checkbox-checkbox

        >
          <i
            aria-hidden={true}
            className=
                ms-Checkbox-checkmark
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  display: inline-block;
                  font-family: "FabricMDL2Icons";
                  font-style: normal;
                  font-weight: normal;
                  speak: none;
                }
            data-icon-name="CheckMark"
          >
            
          </i>
        </div>
        <span
          aria-hidden="true"
          className=
              ms-Checkbox-text

        >
          I am in rtl
        </span>
      </label>
    </div>
    <div
      className=
          ms-Fabric
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #323130;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
          }
          & button {
            font-family: inherit;
          }
          & input {
            font-family: inherit;
          }
          & textarea {
            font-family: inherit;
          }
      dir="ltr"
    >
      <div
        className=
            ms-Checkbox
            is-enabled

      >
        <input
          aria-checked="false"
          aria-label="I am in ltr, inside of rtl"
          checked={false}
          className=


          id="checkbox-17"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="checkbox"
        />
        <label
          className=
              ms-Checkbox-label

          htmlFor="checkbox-17"
        >
          <div
            className=
                ms-Checkbox-checkbox

          >
            <i
              aria-hidden={true}
              className=
                  ms-Checkbox-checkmark
                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    display: inline-block;
                    font-family: "FabricMDL2Icons";
                    font-style: normal;
                    font-weight: normal;
                    speak: none;
                  }
              data-icon-name="CheckMark"
            >
              
            </i>
          </div>
          <span
            aria-hidden="true"
            className=
                ms-Checkbox-text

          >
            I am in ltr, inside of rtl
          </span>
        </label>
      </div>
      <div
        className=
            ms-Fabric
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
            }
            & button {
              font-family: inherit;
            }
            & input {
              font-family: inherit;
            }
            & textarea {
              font-family: inherit;
            }
        dir="rtl"
      >
        <div
          className=
              ms-Checkbox
              is-enabled

        >
          <input
            aria-checked="false"
            aria-label="I am in rtl, inside of rtl, inside of rtl"
            checked={false}
            className=


            id="checkbox-18"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
          <label
            className=
                ms-Checkbox-label

            htmlFor="checkbox-18"
          >
            <div
              className=
                  ms-Checkbox-checkbox

            >
              <i
                aria-hidden={true}
                className=
                    ms-Checkbox-checkmark
                    {
                      -moz-osx-font-smoothing: grayscale;
                      -webkit-font-smoothing: antialiased;
                      display: inline-block;
                      font-family: "FabricMDL2Icons";
                      font-style: normal;
                      font-weight: normal;
                      speak: none;
                    }
                data-icon-name="CheckMark"
              >
                
              </i>
            </div>
            <span
              aria-hidden="true"
              className=
                  ms-Checkbox-text

            >
              I am in rtl, inside of rtl, inside of rtl
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Fabric renders a Fabric component with applyTheme correctly 1`] = `
<div
  className=
      ms-Fabric
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background-color: #ffffff;
        color: #323130;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
      & button {
        font-family: inherit;
      }
      & input {
        font-family: inherit;
      }
      & textarea {
        font-family: inherit;
      }
>
  test
</div>
`;

exports[`Fabric renders as a span using the "as" prop 1`] = `
<span
  className=
      ms-Fabric
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        color: #323130;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
      & button {
        font-family: inherit;
      }
      & input {
        font-family: inherit;
      }
      & textarea {
        font-family: inherit;
      }
/>
`;
